// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <Calendar /> icon should render Calendar icon correctly with default props 1`] = `
<svg
  className="chainIcon"
  height={40}
  viewBox="0 0 25 25"
  width={40}
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Chain Icon
  </title>
  <path
    className="chainIconPath"
    d="M7,24.41a5,5,0,0,1-3.54-1.46L2.05,21.54a5,5,0,0,1,0-7.07l1.41-1.41a5,5,0,0,1,7.07,0l1.41,1.41a5,5,0,0,1,0,7.07l-1.41,1.41A5,5,0,0,1,7,24.41ZM3.46,15.88a3,3,0,0,0,0,4.24l1.41,1.41a3,3,0,0,0,4.24,0l1.41-1.41a3,3,0,0,0,0-4.24L9.12,14.46a3,3,0,0,0-4.24,0Z"
    fill="currentColor"
  />
  <path
    className="chainIconPath"
    d="M18,13.41a5,5,0,0,1-3.54-1.46l-1.41-1.41a5,5,0,0,1,0-7.07l1.41-1.41a5,5,0,0,1,7.07,0l1.41,1.41a5,5,0,0,1,0,7.07l-1.41,1.41A5,5,0,0,1,18,13.41ZM14.46,4.88a3,3,0,0,0,0,4.24l1.41,1.41a3,3,0,0,0,4.24,0l1.41-1.41a3,3,0,0,0,0-4.24L20.12,3.46a3,3,0,0,0-4.24,0Z"
    fill="currentColor"
  />
  <path
    className="chainIconPath"
    d="M11,16a1,1,0,0,1-.71-1.71l4-4a1,1,0,0,1,1.41,1.41l-4,4A1,1,0,0,1,11,16Z"
    fill="currentColor"
  />
</svg>
`;

exports[`Test <Calendar /> icon should render Calendar icon correctly with props 1`] = `
<svg
  className="pof"
  height={30}
  viewBox="0 0 25 25"
  width={30}
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Chain Icon
  </title>
  <path
    className="chainIconPath"
    d="M7,24.41a5,5,0,0,1-3.54-1.46L2.05,21.54a5,5,0,0,1,0-7.07l1.41-1.41a5,5,0,0,1,7.07,0l1.41,1.41a5,5,0,0,1,0,7.07l-1.41,1.41A5,5,0,0,1,7,24.41ZM3.46,15.88a3,3,0,0,0,0,4.24l1.41,1.41a3,3,0,0,0,4.24,0l1.41-1.41a3,3,0,0,0,0-4.24L9.12,14.46a3,3,0,0,0-4.24,0Z"
    fill="#a4a1a1"
  />
  <path
    className="chainIconPath"
    d="M18,13.41a5,5,0,0,1-3.54-1.46l-1.41-1.41a5,5,0,0,1,0-7.07l1.41-1.41a5,5,0,0,1,7.07,0l1.41,1.41a5,5,0,0,1,0,7.07l-1.41,1.41A5,5,0,0,1,18,13.41ZM14.46,4.88a3,3,0,0,0,0,4.24l1.41,1.41a3,3,0,0,0,4.24,0l1.41-1.41a3,3,0,0,0,0-4.24L20.12,3.46a3,3,0,0,0-4.24,0Z"
    fill="#a4a1a1"
  />
  <path
    className="chainIconPath"
    d="M11,16a1,1,0,0,1-.71-1.71l4-4a1,1,0,0,1,1.41,1.41l-4,4A1,1,0,0,1,11,16Z"
    fill="currentColor"
  />
</svg>
`;
